savings history of the savings page is left

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -37,7 +37,11 @@
   background-size: cover;
   background-position: contain;
   background-repeat: no-repeat;
-  
+}
+
+.width{
+  width: 350px;
+  height: 170px
 }
 
 ::-webkit-scrollbar{
@@ -89,6 +93,6 @@
   margin-bottom: -13px;
 }
 
-.defaultCard .buttonChild p::after{
-
+.dashboardH1{
+  margin: 5px 0;
 }
